<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <Button
        android:id="@+id/button_editor"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.3"
        android:layout_height="wrap_content"
        android:text="@string/editor"
        app:layout_constraintTop_toTopOf = "parent"
        app:layout_constraintBottom_toTopOf = "@+id/button_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/button_category"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.3"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintTop_toBottomOf = "@id/button_editor"
        app:layout_constraintBottom_toTopOf = "@id/button_country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/button_country"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.3"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintTop_toBottomOf="@id/button_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>